<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/nav_map" />
    <item
        android:id="@+id/navigation_watch"
        android:icon="@drawable/ic_waves"
        android:title="@string/nav_watch" />
    <item
        android:id="@+id/navigation_index"
        android:icon="@drawable/ic_index"
        android:title="@string/nav_index" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
