<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.koretide.app.ui.search.SearchFragment"
        android:label="@string/nav_search" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.koretide.app.ui.map.MapFragment"
        android:label="@string/nav_map" />

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.koretide.app.ui.detail.DetailFragment"
        android:label="@string/nav_detail" />

    <fragment
        android:id="@+id/navigation_watch"
        android:name="com.koretide.app.ui.tidewatch.TideWatchFragment"
        android:label="@string/nav_watch" />
</navigation>
